# ss14-hellmachine

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
backend/: maps_data.py  utils.py
base/: settings.py
frontend/: ui.py  widgets.py
src/: main.py
src/base/: settings.py
src/controllers/: map_controllers.py
src/models/: map.py
src/utils/: utils.py
src/views/: main_window.py
src/views/widgets/: custom_widgets.py  map_widget.py
